@@ -18,6 +18,9 @@ version 0.9.7 -- UNRELEASED
 	   does not prevent mysqldump to work.
 	 . Fix the error message displayed when mysqld is not running:
 	   mysqladmin ping indeed returns 0 when authentication fails.
+	sys:
+	 . New luksheaders option (default=disabled) to backup the Luks header
+	   of every Luks device.
 
 version 0.9.6 -- July 21, 2008
     backupninja changes
